--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Profil - Beauty</title>
+    <title>Profil-Beauty</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <script src="https://kit.fontawesome.com/YOUR-FONT-AWESOME-CODE.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body class="bg-light">
 
     <div class="container mt-5 text-center">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-auto">
-                <img src="foto.jpg" class="img-thumbnail rounded-circle" style="max-height: 160px;" alt="Foto Profil">
+                <img src="https://drive.google.com/uc?id=1n7aU8IIarYOKMzREXEbVA1U4Ya_HWxgS" class="img-thumbnail rounded-circle" style="max-height: 160px;" alt="Foto Profil">
             </div>
             <div class="col-md-6 text-start">
                 <h3>Hi, I'm Beauty Insyiroh Nusuvul Layli</h3>
