--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container mt-5 text-center">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-auto">
-                <img src="https://github.com/beautyinsyrh/beautyinsyrh.github.io/blob/main/foto.jpg" class="img-thumbnail rounded-circle" style="max-height: 160px;" alt="Foto Profil">
+                <img src="https://drive.google.com/uc?id=1n7aU8IIarYOKMzREXEbVA1U4Ya_HWxgS" class="img-thumbnail rounded-circle" style="max-height: 100px;" alt="Foto Profil">
             </div>
             <div class="col-md-6 text-start">
                 <h3>Hi, I'm Beauty Insyiroh Nusuvul Layli</h3>
@@ -44,9 +44,16 @@
             </div>
         </div>
         <div class="mt-5">
-            <h4 class="fw-bold">🛠️ Teknologi yang Saya Gunakan</h4>
-            <p>Python, HTML, CSS, JavaScript, Java, PHP, MySQL, C, C++</p>
+            <h4 class="fw-bold">🛠️ Technical Skills</h4>
+            <ul class="list-unstyled">
+                <li><strong>Programming:</strong> Java, C, C++, PHP, JavaScript, Python, HTML, CSS</li>
+                <li><strong>Database:</strong> MySQL</li>
+                <li><strong>Development Tools:</strong> Sublime Text, Visual Studio Code, XAMPP</li>
+                <li><strong>Networking Tools:</strong> GNS3, Winbox</li>
+                <li><strong>Other Tools:</strong> Microsoft Office</li>
+            </ul>
         </div>
+
         <div class="mt-5">
             <h4 class="fw-bold">📫 Hubungi Saya</h4>
             <div class="d-flex justify-content-center gap-3 mt-3">
