--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container mt-5 text-center">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-auto">
-                <img src="/images/foto.jpg" class="img-thumbnail rounded-circle" style="max-height: 100px;" alt="Foto Profil">
+                <img src="images/foto.jpg" class="img-thumbnail rounded-circle" style="max-height: 100px;" alt="Foto Profil">
             </div>
             <div class="col-md-6 text-start">
                 <h3>Hi, I'm Beauty Insyiroh Nusuvul Layli</h3>
