--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Profil-Beauty</title>
+    <title>Profile-Beauty</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
@@ -12,33 +12,33 @@
     <div class="container mt-5 text-center">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-auto">
-                <img src="images/foto.jpg" class="img-thumbnail rounded-circle" style="max-height: 100px;" alt="Foto Profil">
+                <img src="images/foto.jpg" class="img-thumbnail rounded-circle" style="max-height: 100px;" alt="Profile Picture">
             </div>
             <div class="col-md-6 text-start">
                 <h3>Hi, I'm Beauty Insyiroh Nusuvul Layli</h3>
                 <h5>Aspiring Full-Stack Developer | Passionate About Web & Data</h5>
-                <p>Saya adalah mahasiswa yang tertarik pada pengembangan web, aplikasi, dan data. Saya terus belajar dan mengeksplorasi teknologi baru untuk menjadi seorang full-stack developer.</p>
+                <p>I am a student interested in web development, application development, and data. I am continuously learning and exploring new technologies to become a full-stack developer.</p>
             </div>
         </div>
         <div class="mt-5">
-            <h4 class="fw-bold">💡 Bidang yang Saya Minati</h4>
+            <h4 class="fw-bold">💡 Fields of Interest</h4>
             <div class="row mt-3 justify-content-center">
                 <div class="col-md-3">
                     <div class="card p-3 shadow-sm">
                         <h5>🌐 Web Development</h5>
-                        <p>Membangun website dengan teknologi modern.</p>
+                        <p>Building websites with modern technologies.</p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card p-3 shadow-sm">
                         <h5>📱 App Development</h5>
-                        <p>Mengembangkan aplikasi berbasis mobile dan desktop.</p>
+                        <p>Developing mobile and desktop applications.</p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card p-3 shadow-sm">
                         <h5>📊 Data & Database</h5>
-                        <p>Analisis data dan manajemen database.</p>
+                        <p>Data analysis and database management.</p>
                     </div>
                 </div>
             </div>
@@ -55,7 +55,7 @@
         </div>
 
         <div class="mt-5">
-            <h4 class="fw-bold">📫 Hubungi Saya</h4>
+            <h4 class="fw-bold">📫 Contact Me</h4>
             <div class="d-flex justify-content-center gap-3 mt-3">
                 <a href="https://github.com/beautyinsyrh" class="btn btn-primary"><i class="fab fa-github"></i> GitHub</a>
                 <a href="https://www.linkedin.com/in/beauty-insyiroh-nusuvul-layli-52b19628b/" class="btn btn-primary"><i class="fab fa-linkedin"></i> LinkedIn</a>
