--- a/index.html
+++ b/index.html
@@ -1,68 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Profile-Beauty</title>
+    <title>Beauty's Profile</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
+
 <body class="bg-light">
 
+    <!-- Header -->
     <div class="container mt-5 text-center">
-        <div class="row d-flex align-items-center justify-content-center">
-            <div class="col-auto">
-                <img src="images/foto.jpg" class="img-thumbnail rounded-circle" style="max-height: 100px;" alt="Profile Picture">
-            </div>
-            <div class="col-md-6 text-start">
-                <h3>Hi, I'm Beauty Insyiroh Nusuvul Layli</h3>
-                <h5>Aspiring Full-Stack Developer | Passionate About Web & Data</h5>
-                <p>I am a student interested in web development, application development, and data. I am continuously learning and exploring new technologies to become a full-stack developer.</p>
-            </div>
-        </div>
-        <div class="mt-5">
-            <h4 class="fw-bold">💡 Fields of Interest</h4>
-            <div class="row mt-3 justify-content-center">
-                <div class="col-md-3">
-                    <div class="card p-3 shadow-sm">
-                        <h5>🌐 Web Development</h5>
-                        <p>Building websites with modern technologies.</p>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card p-3 shadow-sm">
-                        <h5>📱 App Development</h5>
-                        <p>Developing mobile and desktop applications.</p>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card p-3 shadow-sm">
-                        <h5>📊 Data & Database</h5>
-                        <p>Data analysis and database management.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="mt-5">
-            <h4 class="fw-bold">🛠️ Technical Skills</h4>
-            <ul class="list-unstyled">
-                <li><strong>Programming:</strong> Java, C, C++, PHP, JavaScript, Python, HTML, CSS</li>
-                <li><strong>Database:</strong> MySQL</li>
-                <li><strong>Development Tools:</strong> Sublime Text, Visual Studio Code, XAMPP</li>
-                <li><strong>Networking Tools:</strong> GNS3, Winbox</li>
-                <li><strong>Other Tools:</strong> Microsoft Office</li>
-            </ul>
-        </div>
+        <img src="images/foto.jpg" class="img-thumbnail rounded-circle mb-3" style="max-height: 120px;"
+            alt="Profile Picture">
+        <h2 class="fw-bold">Hi there! 👋 I'm Beauty Insyiroh Nusuvul Layli</h2>
+        <h5 class="text-muted">💻 Web & Mobile App Dev Enthusiast | 🎓 IT Undergraduate</h5>
+        <p>✨ I enjoy turning coffee into code, especially for building cute websites and useful mobile apps!</p>
+    </div>
 
-        <div class="mt-5">
-            <h4 class="fw-bold">📫 Contact Me</h4>
-            <div class="d-flex justify-content-center gap-3 mt-3">
-                <a href="https://github.com/beautyinsyrh" class="btn btn-primary"><i class="fab fa-github"></i> GitHub</a>
-                <a href="https://www.linkedin.com/in/beauty-insyiroh-nusuvul-layli-52b19628b/" class="btn btn-primary"><i class="fab fa-linkedin"></i> LinkedIn</a>
-                <a href="mailto:23081010141@example.com" class="btn btn-primary"><i class="fas fa-envelope"></i> Email</a>
+    <!-- My Projects -->
+    <div class="container mt-5">
+        <h4 class="fw-bold text-center">🚀 My Projects</h4>
+        <div class="row justify-content-center">
+
+            <div class="col-md-8">
+                <!-- Project Card 1: Web Pemesanan Cafe -->
+                <div class="card mb-4 shadow-sm">
+                    <img src="images/project1.jpg.png" class="card-img-top" alt="Cafe Order System">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">🍰 Web Pemesanan Cafe</h5>
+                        <p class="card-text">Sistem pemesanan untuk kafe yang memungkinkan pelanggan memesan makanan dan
+                            minuman secara online. Fitur mencakup histori pesanan dan struk pembayaran.</p>
+                        <a href="https://github.com/chelvinramadani/Webcafe" class="btn btn-primary"
+                            target="_blank">🔗 View Project</a>
+                    </div>
+                </div>
+
+                <!-- Project Card 2: Web Pemesanan Kue -->
+                <div class="card mb-4 shadow-sm">
+                    <img src="images/project2.jpg.png" class="card-img-top" alt="Cake Order System">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">🍰 Web Pemesanan Kue</h5>
+                        <p class="card-text">Platform pemesanan kue custom yang memungkinkan pengguna untuk memilih kue
+                            sesuai selera, menentukan desain, dan memesan secara online.</p>
+                        <a href="https://github.com/beautyinsyrh/LaKue" class="btn btn-primary"
+                            target="_blank">🔗 View Project</a>
+                    </div>
+                </div>
+
+                <!-- Tambah card project lainnya di sini -->
+            </div>
+
+        </div>
+    </div>
+    <!-- Fields of Interest -->
+    <div class="container mt-5">
+        <h4 class="fw-bold text-center">💡 Fields of Interest</h4>
+        <div class="row mt-3 justify-content-center">
+            <div class="col-md-3">
+                <div class="card p-3 shadow-sm text-center">
+                    <h5>🌐 Web Development</h5>
+                    <p>Building cute, responsive, and functional websites.</p>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card p-3 shadow-sm text-center">
+                    <h5>📱 Mobile Apps</h5>
+                    <p>Creating mobile apps that (hopefully) make life easier!</p>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card p-3 shadow-sm text-center">
+                    <h5>📊 Data & Database</h5>
+                    <p>Making sense of data and keeping it neatly stored.</p>
+                </div>
             </div>
         </div>
     </div>
+
+    <!-- Skills -->
+    <div class="container mt-5">
+        <h4 class="fw-bold text-center">🛠️ Technical Skills</h4>
+        <ul class="list-unstyled text-center">
+            <li><strong>Languages:</strong> Java, C, C++, PHP, JavaScript, Python, HTML, CSS</li>
+            <li><strong>Database:</strong> MySQL</li>
+            <li><strong>Tools:</strong> VS Code, Sublime Text, XAMPP, GNS3, Winbox, Microsoft Office</li>
+        </ul>
+    </div>
+
+    <!-- Contact -->
+    <div class="container mt-5 text-center">
+        <h4 class="fw-bold">📫 Contact Me</h4>
+        <div class="d-flex justify-content-center gap-3 mt-3">
+            <a href="https://github.com/beautyinsyrh" class="btn btn-dark"><i class="fab fa-github"></i> GitHub</a>
+            <a href="https://www.linkedin.com/in/beauty-insyiroh-nusuvul-layli-52b19628b/" class="btn btn-primary"><i
+                    class="fab fa-linkedin"></i> LinkedIn</a>
+            <a href="mailto:23081010141@example.com" class="btn btn-danger"><i class="fas fa-envelope"></i> Email</a>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
