--- a/index.html
+++ b/index.html
@@ -15,22 +15,21 @@
     <div class="container mt-5 text-center">
         <img src="images/foto.jpg" class="img-thumbnail rounded-circle mb-3" style="max-height: 120px;"
             alt="Profile Picture">
-        <h2 class="fw-bold">Hi there! 👋 I'm Beauty Insyiroh Nusuvul Layli</h2>
+        <h2 class="fw-bold">Hi! 👋 I'm Beauty Insyiroh Nusuvul Layli</h2>
         <h5 class="text-muted">💻 Web & Mobile App Dev Enthusiast | 🎓 IT Undergraduate</h5>
-        <p>✨ I enjoy turning coffee into code, especially for building cute websites and useful mobile apps!</p>
+        <p>I enjoy for building cute websites and useful mobile apps!</p>
     </div>
 
     <!-- My Projects -->
     <div class="container mt-5">
-        <h4 class="fw-bold text-center">🚀 My Projects</h4>
+        <h4 class="fw-bold text-center"> My Projects</h4>
         <div class="row justify-content-center">
 
-            <div class="col-md-8">
-                <!-- Project Card 1: Web Pemesanan Cafe -->
+            <div class="col-md-12">
                 <div class="card mb-4 shadow-sm">
                     <img src="images/project1.jpg.png" class="card-img-top" alt="Cafe Order System">
                     <div class="card-body text-center">
-                        <h5 class="card-title">🍰 Web Pemesanan Cafe</h5>
+                        <h5 class="card-title"> Web Pemesanan Cafe</h5>
                         <p class="card-text">Sistem pemesanan untuk kafe yang memungkinkan pelanggan memesan makanan dan
                             minuman secara online. Fitur mencakup histori pesanan dan struk pembayaran.</p>
                         <a href="https://github.com/chelvinramadani/Webcafe" class="btn btn-primary"
@@ -38,11 +37,10 @@
                     </div>
                 </div>
 
-                <!-- Project Card 2: Web Pemesanan Kue -->
                 <div class="card mb-4 shadow-sm">
                     <img src="images/project2.jpg.png" class="card-img-top" alt="Cake Order System">
                     <div class="card-body text-center">
-                        <h5 class="card-title">🍰 Web Pemesanan Kue</h5>
+                        <h5 class="card-title"> LaKue - Web Pemesanan Kue</h5>
                         <p class="card-text">Platform pemesanan kue custom yang memungkinkan pengguna untuk memilih kue
                             sesuai selera, menentukan desain, dan memesan secara online.</p>
                         <a href="https://github.com/beautyinsyrh/LaKue" class="btn btn-primary"
@@ -50,8 +48,15 @@
                     </div>
                 </div>
 
-                <!-- Tambah card project lainnya di sini -->
-            </div>
+                <div class="card mb-4 shadow-sm">
+                    <img src="images/project3.png" class="card-img-top" alt="Cake Order System">
+                    <div class="card-body text-center">
+                        <h5 class="card-title"> NyaLaPol - Web Manajemen Waktu Belajar</h5>
+                        <p class="card-text">Sistem manajemen waktu belajar yang membuat user dapat nyaman dengan tampilan dan fitur yang berguna.</p>
+                        <a href="https://github.com/beautyinsyrh/NyaLaPol" class="btn btn-primary"
+                            target="_blank">🔗 View Project</a>
+                    </div>
+                </div>
 
         </div>
     </div>
