--- a/index.html
+++ b/index.html
@@ -26,87 +26,163 @@
         <div class="row justify-content-center">
 
             <div class="col-md-12">
-                <div class="card mb-4 shadow-sm">
+                <div class="card mb-3 shadow-sm">
                     <img src="images/project1.jpg.png" class="card-img-top" alt="Cafe Order System">
                     <div class="card-body text-center">
                         <h5 class="card-title"> Web Pemesanan Cafe</h5>
                         <p class="card-text">Sistem pemesanan untuk kafe yang memungkinkan pelanggan memesan makanan dan
                             minuman secara online. Fitur mencakup histori pesanan dan struk pembayaran.</p>
-                        <a href="https://github.com/chelvinramadani/Webcafe" class="btn btn-primary"
-                            target="_blank">🔗 View Project</a>
+                        <a href="https://github.com/chelvinramadani/Webcafe" class="btn btn-primary" target="_blank">🔗
+                            View Project</a>
                     </div>
                 </div>
 
-                <div class="card mb-4 shadow-sm">
+                <div class="card mb-3 shadow-sm">
                     <img src="images/project2.jpg.png" class="card-img-top" alt="Cake Order System">
                     <div class="card-body text-center">
                         <h5 class="card-title"> LaKue - Web Pemesanan Kue</h5>
                         <p class="card-text">Platform pemesanan kue custom yang memungkinkan pengguna untuk memilih kue
                             sesuai selera, menentukan desain, dan memesan secara online.</p>
-                        <a href="https://github.com/beautyinsyrh/LaKue" class="btn btn-primary"
-                            target="_blank">🔗 View Project</a>
+                        <a href="https://github.com/beautyinsyrh/LaKue" class="btn btn-primary" target="_blank">🔗 View
+                            Project</a>
                     </div>
                 </div>
 
-                <div class="card mb-4 shadow-sm">
+                <div class="card mb-3 shadow-sm">
                     <img src="images/project3.png" class="card-img-top" alt="Cake Order System">
                     <div class="card-body text-center">
                         <h5 class="card-title"> NyaLaPol - Web Manajemen Waktu Belajar</h5>
-                        <p class="card-text">Sistem manajemen waktu belajar yang membuat user dapat nyaman dengan tampilan dan fitur yang berguna.</p>
-                        <a href="https://github.com/beautyinsyrh/NyaLaPol" class="btn btn-primary"
-                            target="_blank">🔗 View Project</a>
+                        <p class="card-text">Sistem manajemen waktu belajar yang membuat user dapat nyaman dengan
+                            tampilan dan fitur yang berguna.</p>
+                        <a href="https://github.com/beautyinsyrh/NyaLaPol" class="btn btn-primary" target="_blank">🔗
+                            View Project</a>
                     </div>
                 </div>
 
-        </div>
-    </div>
-    <!-- Fields of Interest -->
-    <div class="container mt-5">
-        <h4 class="fw-bold text-center">💡 Fields of Interest</h4>
-        <div class="row mt-3 justify-content-center">
-            <div class="col-md-3">
-                <div class="card p-3 shadow-sm text-center">
-                    <h5>🌐 Web Development</h5>
-                    <p>Building cute, responsive, and functional websites.</p>
+                <div class="card mb-3 shadow-sm">
+                    <img src="images/project4.png" class="card-img-top" alt="React">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Berseri - Belajar Seru di Sini</h5>
+                        <p class="card-text">Aplikasi belajar anak untuk melatih perkembangan</p>
+                        <a href="https://github.com/beautyinsyrh/React.git" class="btn btn-primary" target="_blank">🔗
+                            View Project</a>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card p-3 shadow-sm text-center">
-                    <h5>📱 Mobile Apps</h5>
-                    <p>Creating mobile apps that (hopefully) make life easier!</p>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card p-3 shadow-sm text-center">
-                    <h5>📊 Data & Database</h5>
-                    <p>Making sense of data and keeping it neatly stored.</p>
-                </div>
+
             </div>
         </div>
-    </div>
-
-    <!-- Skills -->
-    <div class="container mt-5">
-        <h4 class="fw-bold text-center">🛠️ Technical Skills</h4>
-        <ul class="list-unstyled text-center">
-            <li><strong>Languages:</strong> Java, C, C++, PHP, JavaScript, Python, HTML, CSS</li>
-            <li><strong>Database:</strong> MySQL</li>
-            <li><strong>Tools:</strong> VS Code, Sublime Text, XAMPP, GNS3, Winbox, Microsoft Office</li>
-        </ul>
-    </div>
-
-    <!-- Contact -->
-    <div class="container mt-5 text-center">
-        <h4 class="fw-bold">📫 Contact Me</h4>
-        <div class="d-flex justify-content-center gap-3 mt-3">
-            <a href="https://github.com/beautyinsyrh" class="btn btn-dark"><i class="fab fa-github"></i> GitHub</a>
-            <a href="https://www.linkedin.com/in/beauty-insyiroh-nusuvul-layli-52b19628b/" class="btn btn-primary"><i
-                    class="fab fa-linkedin"></i> LinkedIn</a>
-            <a href="mailto:23081010141@example.com" class="btn btn-danger"><i class="fas fa-envelope"></i> Email</a>
+        <!-- Fields of Interest -->
+        <div class="container mt-5">
+            <h4 class="fw-bold text-center">💡 Fields of Interest</h4>
+            <div class="row mt-3 justify-content-center">
+                <div class="col-md-3">
+                    <div class="card p-3 shadow-sm text-center">
+                        <h5>🌐 Web Development</h5>
+                        <p>Building cute, responsive, and functional websites.</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card p-3 shadow-sm text-center">
+                        <h5>📱 Mobile Apps</h5>
+                        <p>Creating mobile apps that (hopefully) make life easier!</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card p-3 shadow-sm text-center">
+                        <h5>📊 Data & Database</h5>
+                        <p>Making sense of data and keeping it neatly stored.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!--Paper-->
+        <section id="publikasi" class="py-5">
+            <div class="container">
+                <h3 class="text-center fw-bold mb-5">📝 Publikasi Jurnal</h3>
+                <div class="row justify-content-center">
+
+                    <!-- Card 1 -->
+                    <div class="col-md-4 mb-4">
+                        <div class="card h-100 shadow-sm border-0 text-center p-3">
+                            <div class="card-body">
+                                <p class="card-text">
+                                    Pengembangan Aplikasi Manajemen Klinik Dokter Gigi Berbasis Desktop Menggunakan
+                                    Object-Oriented Programming
+                                </p>
+                                <a href="https://santika.upnjatim.ac.id/submissions/index.php/santika/article/view/799/179"
+                                    target="_blank" class="btn btn-outline-primary mt-3">
+                                    🔗 Lihat Publikasi
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Card 2 -->
+                    <div class="col-md-4 mb-4">
+                        <div class="card h-100 shadow-sm border-0 text-center p-3">
+                            <div class="card-body">
+                                <p class="card-text">
+                                    Prediksi Jumlah Pembeli Pulsa Berdasarkan Jumlah Pembeli dan Total Harga Dengan
+                                    Metode Regresi Linier
+                                </p>
+                                <a href="https://ejurnal.itats.ac.id/semtik/article/view/6946" target="_blank"
+                                    class="btn btn-outline-primary mt-3">
+                                    🔗 Lihat Publikasi
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Card 3 -->
+                    <div class="col-md-4 mb-4">
+                        <div class="card h-100 shadow-sm border-0 text-center p-3">
+                            <div class="card-body">
+                                <p class="card-text">
+                                    Perancangan UI/UX Aplikasi Pembelajaran Bahasa Daerah Menggunakan Metode User
+                                    Centered Design
+                                </p>
+                                <a href="https://santika.upnjatim.ac.id/submissions/index.php/santika/article/view/749/228"
+                                    target="_blank" class="btn btn-outline-primary mt-3">
+                                    🔗 Lihat Publikasi
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <!-- Skills -->
+        <div class="container mt-5">
+            <h4 class="fw-bold text-center">🛠️ Technical Skills</h4>
+            <ul class="list-unstyled text-center">
+                <li><strong>Data:</strong> Excel (cleaning, pivot chart/dashboard), Python (data wrangling & analysis)
+                </li>
+                <li><strong>Python stack:</strong> Pandas, NumPy, Matplotlib</li>
+                <li><strong>SQL & Database:</strong> MySQL</li>
+                <li><strong>Analyst Competencies:</strong> Data cleaning & preparation, EDA, basic statistics,
+                    visualization, reporting</li>
+                <li><strong>Languages (Programming):</strong> HTML, CSS, JavaScript, PHP, Java, C, C++</li>
+                <li><strong>Frameworks:</strong> CodeIgniter, Laravel, React</li>
+                <li><strong>Tools:</strong> VS Code, Jupyter Notebook, XAMPP, Microsoft Office (Excel)</li>
+            </ul>
+        </div>
+
+        <!-- Contact -->
+        <div class="container mt-5 text-center">
+            <h4 class="fw-bold">📫 Contact Me</h4>
+            <div class="d-flex justify-content-center gap-3 mt-3">
+                <a href="https://github.com/beautyinsyrh" class="btn btn-dark"><i class="fab fa-github"></i> GitHub</a>
+                <a href="https://www.linkedin.com/in/beauty-insyiroh-nusuvul-layli-52b19628b/"
+                    class="btn btn-primary"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                <a href="mailto:23081010141@example.com" class="btn btn-danger"><i class="fas fa-envelope"></i>
+                    Email</a>
+            </div>
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
