--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     visualization, reporting</li>
                 <li><strong>Languages (Programming):</strong> HTML, CSS, JavaScript, PHP, Java, C, C++</li>
                 <li><strong>Frameworks:</strong> CodeIgniter, Laravel, React</li>
-                <li><strong>Tools:</strong> VS Code, Jupyter Notebook, XAMPP, Microsoft Office (Excel)</li>
+                <li><strong>Tools:</strong> VS Code, Colab, XAMPP, Microsoft Office (Excel)</li>
             </ul>
         </div>
 
