--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <a href="https://github.com/beautyinsyrh" class="btn btn-dark"><i class="fab fa-github"></i> GitHub</a>
                 <a href="https://www.linkedin.com/in/beauty-insyiroh-nusuvul-layli-52b19628b/"
                     class="btn btn-primary"><i class="fab fa-linkedin"></i> LinkedIn</a>
-                <a href="mailto:23081010141@example.com" class="btn btn-danger"><i class="fas fa-envelope"></i>
+                <a href="mailto:beautyinsyrohh@gmail.com" class="btn btn-danger"><i class="fas fa-envelope"></i>
                     Email</a>
             </div>
         </div>
